ACLOCAL_AMFLAGS = -I m4

AM_CFLAGS = -g -O2 $(CFLAGS)

bin_PROGRAMS = umk3
umk3_SOURCES = \
               src/BKGDBALC.C \
               src/BKGDESRT.C \
	       src/BKGDSKEN.C \
	       src/DIGLOAD.H \
	       src/MKANI.C \
	       src/MKBKGD.C \
	       src/MKBONUS.H \
	       src/MKBUG.H \
	       src/MKCOIN.H \
	       src/MKDRONE.H \
	       src/MKFATAL.H \
	       src/MKFX.H \
	       src/MKHSTD.H \
	       src/MKLADDER.H \
	       src/MKMARK.H \
	       src/MKOPT.H \
	       src/MKPROP.H \
	       src/MKREPELL.H \
	       src/MKSELNEW.H \
	       src/MKSOUND.C \
	       src/MKUTIL.C \
	       src/MOVES.C \
	       src/PSXCDOLD.C \
	       src/SNDLST.H \
	       src/VALLOC.H \
	       src/BKGDBANK.C \
	       src/BKGDGRAV.C \
	       src/BKGDSOUL.C \
	       src/LCDLOAD.H \
	       src/MKANI.H \
	       src/MKBKGD.H \
	       src/MKBOSS.C \
	       src/MKBUYIN.C \
	       src/MKCOMBO.C \
	       src/MKEND.C \
	       src/MKFILE.C \
	       src/MKGAME.H \
	       src/MKINIT.C \
	       src/MKMAIN.C \
	       src/MKMODE.C \
	       src/MKOS.C \
	       src/MKR1.C \
	       src/MKSCORE.C \
	       src/MKSLAM.C \
	       src/MKSOUND.H \
	       src/MKUTIL.H \
	       src/MOVES.H \
	       src/PSXCDOLD.H \
	       src/SONYRLE.C \
	       src/BKGDBELL.C \
	       src/BKGDMOCK.C \
	       src/BKGDTEMP.C \
	       src/MAIN.C \
	       src/MKANIMAL.C \
	       src/MKBKMOD.C \
	       src/MKBOSS.H \
	       src/MKBUYIN.H \
	       src/MKCOMBO.H \
	       src/MKEND.H \
	       src/MKFILE.H \
	       src/MKGLOBAL.C \
	       src/MKINIT.H \
	       src/MKMAIN.H \
	       src/MKMODE.H \
	       src/MKOS.H \
	       src/MKR1.H \
	       src/MKSCORE.H \
	       src/MKSLAM.H \
	       src/MKSTAT.C \
	       src/MKVS.C \
	       src/PSXCDABS.C \
	       src/PSXSND.C \
	       src/SOUNDHW.H \
	       src/BKGDBRIG.C \
	       src/BKGDPIT.C \
	       src/BKGDWATR.C \
	       src/MK3SND.H \
	       src/MKANIMAL.H \
	       src/MKBLOOD.C \
	       src/MKBRIEF.C \
	       src/MKCANNED.C \
	       src/MKDIAG.C \
	       src/MKFADE.C \
	       src/MKFRIEND.C \
	       src/MKGUYS.C \
	       src/MKJOY.C \
	       src/MKMAINOD.C \
	       src/MKOBJ.C \
	       src/MKPAL.C \
	       src/MKREACT.C \
	       src/MKSEL.C \
	       src/MKSND.H \
	       src/MKSTAT.H \
	       src/MKVS.H \
	       src/PSXCDABS.H \
	       src/PSXSND.H \
	       src/STDARG.H \
	       src/BKGDCAVE.C \
	       src/BKGDPORT.C \
	       src/DAVID.C \
	       src/MKAMODE.C \
	       src/MKBIO.C \
	       src/MKBLOOD.H \
	       src/MKBRIEF.H \
	       src/MKCANNED.H \
	       src/MKDIAG.H \
	       src/MKFADE.H \
	       src/MKFRIEND.H \
	       src/MKGUYS.H \
	       src/MKJOY.H \
	       src/MKMAINOD.H \
	       src/MKOBJ.H \
	       src/MKPAL.H \
	       src/MKREACT.H \
	       src/MKSEL.H \
	       src/MKSONY.C \
	       src/MKTEXT.C \
	       src/MKZAP.C \
	       src/PSXCD.C \
	       src/PSXSPU.H \
	       src/SYSTEM.H \
	       src/BKGDCITY.C \
	       src/BKGDSBST.C \
	       src/DAVID.H \
	       src/MKAMODE.H \
	       src/MKBIO.H \
	       src/MKBONUS.C \
	       src/MKBUG.C \
	       src/MKCOIN.C \
	       src/MKDRONE.C \
	       src/MKFATAL.C \
	       src/MKFX.C \
	       src/MKHSTD.C \
	       src/MKLADDER.C \
	       src/MKMARK.C \
	       src/MKOPT.C \
	       src/MKPROP.C \
	       src/MKREPELL.C \
	       src/MKSELNEW.C \
	       src/MKSONY.H \
	       src/MKTEXT.H \
	       src/MKZAP.H \
	       src/PSXCD.H \
	       src/SEQLOAD.H \
	       src/VALLOC.C

