ACLOCAL_AMFLAGS = -I m4

AM_CFLAGS = -g -O2 $(CFLAGS)

bin_PROGRAMS = umk3
umk3_SOURCES = \
src/bkgdbalc.c \
src/bkgdgrav.c \
src/bkgdtemp.c \
src/mk3snd.h \
src/mkbio.c \
src/mkbonus.c \
src/mkbug.h \
src/mkcombo.c \
src/mkend.h \
src/mkfriend.c \
src/mkguys.h \
src/mkladder.c \
src/mkmark.h \
src/mkos.c \
src/mkr1.h \
src/mksel.c \
src/mksony.c \
src/mktext.h \
src/moves.c \
src/psxcdold.h \
src/soundhw.h \
src/bkgdbank.c \
src/bkgdmock.c \
src/bkgdwatr.c \
src/mkamode.c \
src/mkbio.h \
src/mkbonus.h \
src/mkbuyin.c \
src/mkcombo.h \
src/mkfade.c \
src/mkfriend.h \
src/mkhstd.c \
src/mkladder.h \
src/mkmode.c \
src/mkos.h \
src/mkreact.c \
src/mksel.h \
src/mksony.h \
src/mkutil.c \
src/moves.h \
src/psxsnd.c \
src/stdarg.h \
src/bkgdbell.c \
src/bkgdpit.c \
src/david.c \
src/mkamode.h \
src/mkbkgd.c \
src/mkboss.c \
src/mkbuyin.h \
src/mkdiag.c \
src/mkfade.h  \
src/mkfx.c \
src/mkhstd.h \
src/mkmain.c \
src/mkmode.h \
src/mkpal.c \
src/mkreact.h \
src/mkselnew.c \
src/mksound.c \
src/mkutil.h \
src/psxcdabs.c \
src/psxsnd.h \
src/system.h \
src/bkgdbrig.c \
src/bkgdport.c \
src/david.h \
src/mkani.c \
src/mkbkgd.h \
src/mkboss.h \
src/mkcanned.c \
src/mkdiag.h \
src/mkfatal.c \
src/mkfx.h \
src/mkinit.c \
src/mkmain.h \
src/mkobj.c \
src/mkpal.h \
src/mkrepell.c \
src/mkselnew.h \
src/mksound.h \
src/mkvs.c \
src/psxcdabs.h \
src/psxspu.h \
src/valloc.c \
src/bkgdcave.c \
src/bkgdsbst.c \
src/digload.h \
src/mkani.h \
src/mkbkmod.c \
src/mkbrief.c \
src/mkcanned.h  \
src/mkdrone.c \
src/mkfatal.h \
src/mkgame.h \
src/mkinit.h \
src/mkmainod.c \
src/mkobj.h \
src/mkprop.c \
src/mkrepell.h \
src/mkslam.c \
src/mkstat.c \
src/mkvs.h \
src/psxcd.c \
src/seqload.h \
src/valloc.h \
src/bkgdcity.c \
src/bkgdsken.c \
src/lcdload.h \
src/mkanimal.c \
src/mkblood.c \
src/mkbrief.h \
src/mkcoin.c \
src/mkdrone.h \
src/mkfile.c \
src/mkglobal.c \
src/mkjoy.c \
src/mkmainod.h \
src/mkopt.c \
src/mkprop.h \
src/mkscore.c \
src/mkslam.h \
src/mkstat.h \
src/mkzap.c \
src/psxcd.h \
src/sndlst.h \
src/bkgdesrt.c \
src/bkgdsoul.c \
src/main.c \
src/mkanimal.h \
src/mkblood.h \
src/mkbug.c \
src/mkcoin.h \
src/mkend.c \
src/mkfile.h \
src/mkguys.c \
src/mkjoy.h \
src/mkmark.c \
src/mkopt.h \
src/mkr1.c \
src/mkscore.h \
src/mksnd.h \
src/mktext.c \
src/mkzap.h \
src/psxcdold.c \
src/sonyrle.c

